<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <include layout="@layout/save_cancel_btn_layer"
             android:id="@+id/save_cancel_buttons_layer"/>

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/save_cancel_buttons_layer"
                android:fillViewport="true">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:padding="10dp">

            <TextView android:id="@+id/med_name"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textStyle="bold"
                      android:textAppearance="@android:style/TextAppearance.Medium"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content">

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginRight="5dp"
                          android:text="@string/start_from"/>

                <Button android:id="@+id/start_date_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onStartDateButtonClicked"/>

            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="center_vertical">

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/take"/>

                <EditText android:id="@+id/no_of_doses_input"
                          android:layout_width="50dp"
                          android:layout_height="wrap_content"
                          android:layout_margin="5dp"
                          android:gravity="center"
                          android:inputType="number"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/doses_every"/>

                <EditText android:id="@+id/day_interval_input"
                          android:layout_width="50dp"
                          android:layout_height="wrap_content"
                          android:layout_margin="5dp"
                          android:gravity="center"
                          android:inputType="number"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/days"/>

            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="center_vertical">

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/for_a_total_of"/>

                <EditText android:id="@+id/no_of_days_input"
                          android:layout_width="70dp"
                          android:layout_height="wrap_content"
                          android:layout_margin="5dp"
                          android:gravity="center"
                          android:inputType="number"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/days"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/sentence_terminator"/>

            </LinearLayout>

            <Button android:id="@+id/add_reminder_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/add_reminder_times"
                    android:onClick="onAddReminderTimesButtonClicked"/>

            <ListView android:id="@android:id/list"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
